fixed overflow of text, added mealpoint icons to food trucks,  made review/share/feedback buttons more pronouced

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -12,7 +12,7 @@
 .landingPage{
     background: url('images/landingBackground.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: 675px;
+    height: 725px;
 }
 
 .signupPage{
@@ -26,7 +26,7 @@
   background: url('images/sushibackground.jpg') no-repeat center center fixed;
   font-family: 'Comfortaa', sans-serif;
   background-size: cover;
-  height: 700px;
+  max-height: fit-content;
 }
 
 /*.ui.header.firstHeader{*/
@@ -43,13 +43,14 @@
 
 .ui.header.cuisine{
     color: white;
-    text-shadow: -4px 4px 6px #66B9CC;
+    text-shadow: -3px 1px 2px #66B9CC;
     font-size: 50px;
 }
 
 .ui.header.secondHeader{
     color: white;
     text-shadow: -2px 2px 3px gray;
+    font-size: 25px;
 }
 
 .ui.header.thirdHeader{
@@ -85,6 +86,7 @@ div.text:hover{
   line-height: 1.5em;
   color: white;
   alignment: center;
+  bottom: auto;
 }
 
 .buttons-style{
